--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -1,12 +1,8 @@
 <div id="<%= dom_id brewery %>">
   <p>
-    <strong>Name:</strong>
-    <%= link_to brewery.name, brewery %>
-  </p>
-
-  <p>
-    <strong>Year:</strong>
-    <%= brewery.year %>
+    <h2><strong><%= brewery.name %></strong></h2>
+    <i>Established in <%= brewery.year %></i>
+    <p>Beers count: <%= brewery.beers.count %></p>
   </p>
 
 </div>
