--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -5,4 +5,11 @@
     <p>Beers count: <%= brewery.beers.count %></p>
   </p>
 
+  <p>
+   <% brewery.beers.each do |beer| %>
+     <%= link_to beer.name, beer %>
+   <% end %>
+  </p>
+
+
 </div>
