--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -11,4 +11,5 @@
   <% end %>
 </div>
 
-<%= link_to "New beer", new_beer_path %>
+<%= link_to "New beer", new_beer_path %> | 
+<%= link_to "List of breweries", breweries_path %>
