--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -13,4 +13,5 @@
   <% end %>
 </div>
 
-<%= link_to "New brewery", new_brewery_path %>
+<%= link_to "New brewery", new_brewery_path %> | 
+<%= link_to "List of beers", beers_path %>
