--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -23,10 +23,10 @@
 
   <div>
     <%= form.label :brewery_id, style: "display: block" %>
-    <%= form.number_field :brewery_id %>
+    <%= form_for(@beer) do |f| %>
+      <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name) %>
+      <%= f.submit %>
+    <% end %>
   </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
