--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -17,13 +17,10 @@
   </div>
 
   <div>
-    <%= form.label :style, style: "display: block" %>
-    <%= form.text_field :style %>
-  </div>
-
-  <div>
-    <%= form.label :brewery_id, style: "display: block" %>
     <%= form_for(@beer) do |f| %>
+      <%= form.label :style, style: "display: block" %>
+      <%= f.select :style, options_for_select(@styles) %>
+      <%= form.label :brewery_id, style: "display: block" %>
       <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name) %>
       <%= f.submit %>
     <% end %>
