--- a/app/views/beers/_beer.html.erb
+++ b/app/views/beers/_beer.html.erb
@@ -1,20 +1,18 @@
 <div id="<%= dom_id beer %>">
   <p>
     <strong>Name:</strong>
-    <%= link_to beer.name, beer %>
-  </p>
+    <%= link_to beer.name, beer %> <br>
 
-  <p>
     <strong>Style:</strong>
-    <%= beer.style %>
-  </p>
+    <%= beer.style %> <br>
 
-  <p>
     <strong>Brewery:</strong>
-    <%= link_to beer.brewery.name, beer.brewery %>
-  </p>
-
-  <p>
+    <% if beer.brewery.nil? %>
+      no brewery
+    <% else %>
+      <%= link_to beer.brewery.name, beer.brewery %>
+    <% end %> <br>
+    
     <%= beer.average_rating %>
     <% if beer.ratings.empty? %>
       Beer has not yet been rated!
