--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -12,10 +12,10 @@
   </p>
 
   <p>
-    <%= brewery.average_rating %>
     <% if brewery.ratings.empty? %>
-      Brewery has not yet been rated!
+      Brewery has no rated beers!
     <% else %>
+      Brewery has <%= brewery.average_rating %>
     <% end %>
   </p>
 
