--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -15,7 +15,7 @@
     <% if brewery.ratings.empty? %>
       Brewery has no rated beers!
     <% else %>
-      Brewery has <%= brewery.average_rating %>
+      Brewery has <%= brewery.loppuosa %>
     <% end %>
   </p>
 
