--- a/app/views/beers/_beer.html.erb
+++ b/app/views/beers/_beer.html.erb
@@ -16,7 +16,7 @@
     <% if beer.ratings.empty? %>
       Beer has not yet been rated!
     <% else %>
-      Beer has <%= beer.average_rating %>
+      Beer has <%= beer.loppuosa %>
     <% end %>
   </p>
 
