--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,12 @@
       <%= link_to 'breweries', breweries_path %>
       <%= link_to 'beers', beers_path %>
       <%= link_to 'ratings', ratings_path %>
-      <%= link_to 'users', users_path %> | 
+      <%= link_to 'users', users_path %>
+      <%= link_to 'clubs', beerclubs_path %> | 
       <% if current_user %>
         <%= link_to current_user.username, current_user %>
         <%= link_to 'Rate a new beer', new_rating_path %>
+        <%= link_to 'Join a club', new_membership_path %>
         <%= link_to 'Sign out', signout_path %>
       <% else %>
         <%= link_to 'Sign up', signup_path %>
@@ -27,11 +29,6 @@
     </div>
     <%= yield %>
 
-    <% if session[:last_rating].nil? %>
-      <p>no ratings given</p>
-    <% else %>
-      <p>Previous rating: <%= session[:last_rating] %></p>
-    <% end %>
     <% if current_user %>
       <p><%= current_user.username %> signed in</p>
     <% else %>
