--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
       <%= link_to 'beers', beers_path %>
       <%= link_to 'ratings', ratings_path %>
       <%= link_to 'users', users_path %>
-      <%= link_to 'clubs', beerclubs_path %> | 
+      <%= link_to 'clubs', beerclubs_path %>
+      <%= link_to 'search', places_path %> | 
       <% if current_user %>
         <%= link_to current_user.username, current_user %>
         <%= link_to 'Rate a new beer', new_rating_path %>
