--- a/app/views/beerclubs/_beerclub.html.erb
+++ b/app/views/beerclubs/_beerclub.html.erb
@@ -2,28 +2,23 @@
   <p>
     <strong>Name:</strong>
     <%= beerclub.name %>
-  </p>
-
-  <p>
+    <br>
     <strong>Founded:</strong>
     <%= beerclub.founded %>
-  </p>
-
-  <p>
+    <br>
     <strong>City:</strong>
     <%= beerclub.city %>
-  </p>
-
-  <p>
+    <br>
     <strong>Members</strong>
     <ul>
       <% @memberships.each do |mem| %>
-        <% @users.each do |user| %>
-          <% if mem.user_id == user.id %>
-            <li><%= user.username %></li>
+        <% if beerclub.id == mem.beer_club_id %>
+          <% @users.each do |user| %>
+            <% if mem.user_id == user.id %>
+              <li><%= user.username %></li>
+            <% end %>
           <% end %>
         <% end %>
-          
       <% end %>
     </ul>
   </p>
