--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,9 @@
       <%= link_to 'beers', beers_path %>
       <%= link_to 'ratings', ratings_path %>
       <%= link_to 'users', users_path %>
+      <%= link_to 'memberships', memberships_path %>
       <%= link_to 'clubs', beerclubs_path %>
-      <%= link_to 'search', places_path %> | 
+      <%= link_to 'places', places_path %> | 
       <% if current_user %>
         <%= link_to current_user.username, current_user %>
         <%= link_to 'Rate a new beer', new_rating_path %>
