--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -6,11 +6,17 @@
 
 <hr>
 <%= form_for(@membership) do |f| %>
-
+  <% user_id = current_user.id %>
   <% if @beerclubs.nil? %>
     tyhjä klubi
   <% else %>
+    Beer club:
     <%= f.select :beer_club_id, options_from_collection_for_select(@beerclubs, :id, :name) %>
+    <br>
+    Username: <%= current_user.username %>
+    <br>
+    <br>
+    user_id: <%= user_id %>
     <%= f.submit %>
   <% end %>
 <% end %>
