Tehtävä 4.3 favorite_style

--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -14,13 +14,11 @@
   <div>
     <%= form.label :beer_club_id, style: "display: block" %>
     <%= form.select :beer_club_id, options_from_collection_for_select(@beerclubs, :id, :name) %>
-  </div>
 
-  <div>
     <%= form.label :user_id, style: "display: block" %>
-    <%= form.number_field :user_id %>
-    your user id: <%= current_user.id %> 
-    your username: <%= current_user.username %>
+    <% user_id = current_user.id %>
+    <%= form.number_field :user_id, selected: current_user.id %>
+    your user id: <%= current_user.id %> and username: <%= current_user.username %>
   </div>
 
   <div>
