--- a/app/views/beerclubs/show.html.erb
+++ b/app/views/beerclubs/show.html.erb
@@ -2,6 +2,13 @@
 
 <%= render @beerclub %>
 
+<%= form_with(model: @membership) do |form| %>
+  <%= form.hidden_field :beer_club_id, value: @beerclub.id %>
+  <%= form.hidden_field :user_id, value: current_user.id %>
+  <%= form.submit "Join the beer club" %>
+<% end %>
+
+<br>
 <div>
   <%= link_to("Edit this beerclub", edit_beerclub_path(@beerclub)) if current_user %> |
   <%= link_to "Back to beerclubs", beerclubs_path %>
