--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,3 +1,5 @@
+<h2>Beer</h2>
+
 <%= render @beer %>
 
 <% if current_user %>
@@ -6,13 +8,13 @@
   <%= form_with(model: @rating) do |form| %>
     <%= form.hidden_field :beer_id %>
     score: <%= form.number_field :score %>
-    <%= form.submit "Create rating" %>
+    <%= form.submit "Rate this beer", class:"btn btn-primary" %>
   <% end %>
 
   <br>
   <div>
     <%= link_to "Edit this beer", edit_beer_path(@beer) %> | 
     <%= link_to "Back to beers", beers_path %>
-    <%= button_to "Destroy this beer", @beer, method: :delete %>
+    <%= button_to "Destroy this beer", @beer, method: :delete, class:"btn btn-danger" %>
   </div>
 <% end %>
