--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -7,7 +7,7 @@
 
   <p>
     <% brewery.beers.each do |beer| %>
-      <%= link_to beer.name, beer %>
+      <%= link_to beer.name, beer, class:"btn btn-primary" %>
     <% end %>
   </p>
 
