--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,6 +58,6 @@
   <% end %>
   <%= link_to "Back to users", users_path %>
   <% if @user == current_user %>
-    <%= button_to "Destroy this user", @user, method: :delete %>
+    <%= button_to "Destroy my account", @user, method: :delete, class:"btn btn-danger" %>
   <% end %>
 </div>
