--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,17 +44,14 @@
             </li>
             |
             <% if current_user %>
-              <li class="nav-item">
-                <%= link_to "#{current_user.username}", current_user , { class: "nav-link" } %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Rate a beer", new_rating_path , { class: "nav-link" } %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Join a club", new_membership_path , { class: "nav-link" } %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Sign out", signout_path, class: "nav-link", data: {turbo_method: :delete} %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">options</a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "My Page", current_user, class: "dropdown-item" %></li>
+                  <li><%= link_to "Rate a beer", new_rating_path, class: "dropdown-item" %></li>
+                  <li><%= link_to "Join a club", new_membership_path, class: "dropdown-item" %></li>
+                  <li><%= link_to "Sign out", signout_path, class: "dropdown-item", data: {turbo_method: :delete} %></li>
+                </ul>
               </li>
             <% else %>
               <li class="nav-item">
