--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,16 +1,36 @@
-<p style="color: green"><%= notice %></p>
-
 <h1>Breweries</h1>
 
 <p>Number of breweries: <%= @breweries.count %></p>
 
 <div id="breweries">
+<table class="table table-hover">
+<thead>
+  <tr>
+    <th scope="col">Name</th>
+    <th scope="col">Established in</th>
+    <th scope="col">Number of beers</th>
+    <th scope="col">Number of ratings</th>
+    <th scope="col">Average rating</th>
+  </tr>
+</thead>
+<tbody>
   <% @breweries.each do |brewery| %>
-    <div id="<%= dom_id brewery %>">
-      <p><%= link_to brewery.name, brewery, class:"btn btn-primary" %></p>
-      <p><strong>Year:</strong><%= brewery.year %></p>
-    </div>
+    <tr>
+      <td><%= link_to brewery.name, brewery %></td>
+      <td><%= brewery.year %></td>
+      <td><%= brewery.beers.count %></td>
+      <td><%= brewery.ratings.count %></td>
+      <td>
+        <% if !brewery.average_rating.nil? %>
+          <%= brewery.average_rating %>
+        <% else %>
+          No ratings!
+        <% end %>
+      </td>
+    </tr>
   <% end %>
+</tbody>
+</table>
 </div>
 
 <%= link_to("New brewery", new_brewery_path) if current_user  %> | 
