--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,36 +1,73 @@
 <h1>Breweries</h1>
 
-<p>Number of breweries: <%= @breweries.count %></p>
+<h2>Active</h2>
+
+<p> Number of active breweries: <%= @active_breweries.count %> </p>
 
 <div id="breweries">
-<table class="table table-hover">
-<thead>
-  <tr>
-    <th scope="col">Name</th>
-    <th scope="col">Established in</th>
-    <th scope="col">Number of beers</th>
-    <th scope="col">Number of ratings</th>
-    <th scope="col">Average rating</th>
-  </tr>
-</thead>
-<tbody>
-  <% @breweries.each do |brewery| %>
-    <tr>
-      <td><%= link_to brewery.name, brewery %></td>
-      <td><%= brewery.year %></td>
-      <td><%= brewery.beers.count %></td>
-      <td><%= brewery.ratings.count %></td>
-      <td>
-        <% if !brewery.average_rating.nil? %>
-          <%= brewery.average_rating %>
-        <% else %>
-          No ratings!
-        <% end %>
-      </td>
-    </tr>
-  <% end %>
-</tbody>
-</table>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Established in</th>
+        <th scope="col">Number of beers</th>
+        <th scope="col">Number of ratings</th>
+        <th scope="col">Average rating</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @active_breweries.each do |brewery| %>
+        <tr>
+          <td><%= link_to brewery.name, brewery %></td>
+          <td><%= brewery.year %></td>
+          <td><%= brewery.beers.count %></td>
+          <td><%= brewery.ratings.count %></td>
+          <td>
+            <% if !brewery.average_rating.nil? %>
+              <%= brewery.average_rating %>
+            <% else %>
+              No ratings!
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<h2>Retired</h2>
+
+<p> Number of retired breweries: <%= @retired_breweries.count %> </p>
+
+<div id="breweries">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Established in</th>
+        <th scope="col">Number of beers</th>
+        <th scope="col">Number of ratings</th>
+        <th scope="col">Average rating</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @retired_breweries.each do |brewery| %>
+        <tr>
+          <td><%= link_to brewery.name, brewery %></td>
+          <td><%= brewery.year %></td>
+          <td><%= brewery.beers.count %></td>
+          <td><%= brewery.ratings.count %></td>
+          <td>
+            <% if !brewery.average_rating.nil? %>
+              <%= brewery.average_rating %>
+            <% else %>
+              No ratings!
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
 
 <%= link_to("New brewery", new_brewery_path) if current_user  %> | 
