--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,13 +1,66 @@
-<h2>List of ratings</h2>
+<h1>Ratings</h1>
 
 <p>Number of ratings <%= @ratings.count %></p>
 
-<ul>
-  <% @ratings.each do |rating| %>
-    <% if rating.beer %>
-      <li> <%= render rating %> </li>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-sm-3">
+      <h4>Best beers</h4>
+        <div class="row">
+          <div class="col-8 col-sm-6">
+            tähän taulukko
+          </div>
+          <div class="col-8 col-sm-6">
+            Level 2:
+          </div>
+        </div>
+    </div>
+    <div class="col-sm-3">
+      <h4>Best breweries</h4>
+        <div class="col-8 col-sm-6">
+          Level 2:
+        </div>
+        <div class="col-8 col-sm-6">
+          Level 2:
+        </div>
+        <div class="col-8 col-sm-6">
+          Level 2:
+        </div>
+    </div>
+    <div class="col-sm-3">
+      <h4>Best styles</h4>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Style</th>
+            <th scope="col">Average</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @parhaat_tyylit.each do |item| %>
+            <tr>
+              <td><%= item.first %></td>
+              <td><%= item.second[0] %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div><br>
+
+<h3>Most active users</h3>
+  <ul>
+    <% @aktiivisimmat.each do |item| %>
+      <li type="1"> <%= item.first %> <%= item.second %> ratings </li>
     <% end %>
-  <% end %>
-</ul>
+  </ul>
+
+<h3>Recent ratings</h3>
+  <ul>
+    <% @viimeiset_viisi.each do |item| %>
+      <li> <%= item %> </li>
+    <% end %>
+  </ul>
 
 <p><%= link_to 'New rating', new_rating_path %></p><hr>
