--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -18,7 +18,7 @@
     <% if brewery.ratings.empty? %>
       Brewery has no rated beers!
     <% else %>
-      Brewery has <%= pluralize(brewery.ratings.count, 'rating') %> with an average of <%= brewery.average_rating %>
+      Brewery has <%= pluralize(brewery.ratings.count, 'rating') %> with an average of <%= round(brewery.average_rating) %>
     <% end %>
   </p>
 
