--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -26,7 +26,7 @@
           <%= form.label :brewery_id, style: "display: block" %>
           <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name) %>
         </div><br>
-        <%= f.submit "Add beer", class:"btn btn-primary" %>
+        <%= f.submit "Create beer", class:"btn btn-primary" %>
       <% end %>
     </div>
   <% end %>
