Tehtävä (7.2) 7.3 brewerylistin järjestäminen

--- a/app/views/breweries/list.html.erb
+++ b/app/views/breweries/list.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th> <span id="name">Name</span> </th>
-      <th> <span id="founded">Founded</span> </th>
+      <th> <span id="year">Founded</span> </th>
       <th> <span id="total">Number of beers</span> </th>
       <th> <span id="status">Active</span> </th>
     </tr>
