--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -15,6 +15,8 @@
   <div>
     <%= link_to "Edit this beer", edit_beer_path(@beer) %> | 
     <%= link_to "Back to beers", beers_path %>
-    <%= button_to "Destroy this beer", @beer, method: :delete, class:"btn btn-danger" %>
+    <% if current_user.admin == true %>
+      <%= button_to "Destroy this beer", @beer, method: :delete, class:"btn btn-danger" %>
+    <% end %>
   </div>
 <% end %>
