--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,11 +1,12 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @brewery %>
 
-<div>
-  <%= link_to("Edit this brewery", edit_brewery_path(@brewery)) if current_user %> |
-  <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), data: {turbo_method: "post"}, class: "btn btn-primary" %> |
-  <%= link_to "Back to breweries", breweries_path %>
-
-  <%= button_to("Destroy this brewery", @brewery, method: :delete, class:"btn btn-danger") if current_user %>
-</div>
+<% if current_user %>
+  <div>
+    <%= link_to("Edit this brewery", edit_brewery_path(@brewery)) if current_user %> |
+    <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), data: {turbo_method: "post"}, class: "btn btn-primary" %> |
+    <%= link_to "Back to breweries", breweries_path %>
+    <% if current_user.admin == true %>
+      <%= button_to("Destroy this brewery", @brewery, method: :delete, class:"btn btn-danger") if current_user %>
+    <% end %>
+  </div>
+<% end %>
