--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,4 +25,16 @@
   </table>
 </div>
 
+<div id="users">
+  <% @users.each do |user| %>
+    <p>
+      <%= link_to(user.username, user) %>
+      <p>Has made <%= "#{user.ratings.size}"%> ratings, average rating <%= "#{user.average_rating}" %></p>
+      <% if user %>
+        <span class="badge text-bg-danger">account closed</span>
+      <% end %>
+    </p>
+  <% end %>
+</div>
+
 <%= link_to "New user", new_user_path %>
