--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,6 +29,11 @@
   </div>
 
   <div>
+    <%= form.label :active, style: "display: block" %>
+    <%= form.check_box :active %>
+  </div><br>
+
+  <div>
     <%= form.submit "Submit", class:"btn btn-primary" %>
   </div>
 <% end %>
