--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,23 @@
 </p>
 
 <p>
+  <strong>Account status: </strong>
+  <% if @user.active == true %>
+    <span class="badge bg-primary">active</span>
+  <% else %>
+    <span class="badge bg-danger">closed</span>
+  <% end %>
+</p>
+
+<% if current_user %>
+  <% if current_user.admin == true %>
+    <p>
+      <%= link_to "Change account status", toggle_activity_user_path(@user.id), data: {turbo_method: "post"}, class: "btn btn-primary" %>
+    </p>
+  <% end %>
+<% end %>
+
+<p>
   <% if @user.ratings.count == 0 %>
     User has not rated any beers!
   <% else %>
@@ -61,7 +78,7 @@
   <% if @user == current_user %>
     <%= link_to "Edit this user", edit_user_path(@user) %> |
   <% end %>
-  <%= link_to "Back to users", users_path %>
+  <%= link_to "Back to users", users_path %> <br><br>
   <% if @user == current_user %>
     <%= button_to "Destroy my account", @user, method: :delete, class:"btn btn-danger" %>
   <% end %>
